--- a/index.html
+++ b/index.html
@@ -7,171 +7,170 @@
   <meta charset="utf-8">
 
 
-<!-- KC: BOOTSTRAP https://getbootstrap.com/docs/3.3/getting-started/ -->
+  <!-- KC: BOOTSTRAP https://getbootstrap.com/docs/3.3/getting-started/ -->
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"   integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"   integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"   integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"   crossorigin="anonymous"></script>
 
 
-<!-- KC: FONT-AWESOME -->
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <!-- KC: FONT-AWESOME -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"   integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-<!-- KC: FONTS -->
+
+  <!-- KC: FONTS -->
   <style>
-  @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-  @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
-  @import url('https://fonts.googleapis.com/css?family=Andada|Squada+One|Jaldi|Luckiest+Guy|Bowlby+One+SC');
-  @import url('https://fonts.googleapis.com/css?family=Anton|Bangers|Rubik+Mono+One');
-  /*<link href="https://fonts.googleapis.com/css?family=Bungee|Candal|Passion+One" rel="stylesheet">*/
-  @import url('https://fonts.googleapis.com/css?family=Arya');
+    @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
+    @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
+    @import url('https://fonts.googleapis.com/css?family=Andada|Squada+One|Jaldi|Luckiest+Guy|Bowlby+One+SC');
+    @import url('https://fonts.googleapis.com/css?family=Anton|Bangers|Rubik+Mono+One');
+    /*<link href="https://fonts.googleapis.com/css?family=Bungee|Candal|Passion+One" rel="stylesheet">*/
+    @import url('https://fonts.googleapis.com/css?family=Arya');
 
-  body {
-    font-family: 'Arya';
-    /*font-family: 'Marmelad', sans-serif;*/
-    font-weight: lighter;
-  }
+    body {
+      font-family: 'Arya';
+      /*font-family: 'Marmelad', sans-serif;*/
+      font-weight: lighter;
+    }
 
-  h1 {
-    font-family: 'Rubik Mono One'', cursive;
-    /*font-family: 'Bungee', cursive;*/
-    /*font-family: 'Passion One', cursive;*/
-    /*font-family: 'Candal', sans-serif;*/
-  }
+    h1 {
+      font-family: 'Rubik Mono One'', cursive;
+      /*font-family: 'Bungee', cursive;*/
+      /*font-family: 'Passion One', cursive;*/
+      /*font-family: 'Candal', sans-serif;*/
+    }
 
-  h2 {
-      padding-left: .8em;
-  }
-  h3 {
-      padding-left: 1.6em;
-  }
-
-
-  h1, h2, h3 {
-    font-weight: medium;
-  }
+    h2 {
+        padding-left: .8em;
+      }
+      h3 {
+        padding-left: 1.6em;
+      }
 
 
-  .remark-slide-content {
-    font-size: 1.8em;
-    padding-top: .5em;
-    padding-bottom: .5em;
-    padding-left: 1em;
-    padding-right: 1em;
-  }
-  .remark-slide-content h1 {
-    font-size: 2.2em;
-  }
-  .remark-slide-content h2 { font-size: 1.5em; }
-  .remark-slide-content h3 { font-size: 1.3em; }
-  .remark-slide-content blockquote {
-    font-size: 1.2em;
-    padding-left: 1em;
-  }
-
-  .footnote {
-    bottom: 1em;
-  }
-
-  .large{
-    font-size: 1.4em;
-  }
-
-  .small{
-    font-size: .92em;
-  }
-
-  .alert{
-    color: #1b95e0;
-    background-color: #fff;
-  }
-
-  .success{
-    color: #3fb3b2;
-  }
-
-  /*warning: #ffae00*/
-  a > code {
-    color: #3fb3b2;
-  }
-
-  pre {
-    padding: 1px;
-  }
-
-  .remark-code, .remark-inline-code {
-    font-family: 'Ubuntu Mono';
-  }
-
-  .remark-inline-code {
-    color: #1b95e0;
-    background: #000000;
-  }
-
-  .vertical-align {
-    display: flex;
-    align-items: center;
-  }
-
-  .remark-slide-number{
-    /*opacity: 0;*/
-    opacity: 0;
-  }
-
-  .style1 {
-    background: #212121;
-    color: #fff;
-    text-shadow: 0 0 2px #333;
-  }
-
-  .style1 h1, .style1 h2 {
-    color: #fff;
-    font-size: 1.8em;
-  }
-
-  .style1 a {
-    color: #3fb3b2;
-  }
-
-  /*add 2 column*/
-  .column:first-of-type {float:left}
-  .column:last-of-type {float:right}
-
-  .style1 .column:first-of-type {width: 55%}
-  .style1 .column:last-of-type {width: 45%}
+      h1, h2, h3 {
+        font-weight: medium;
+      }
 
 
-  .style2 {
-    background: #545454;
-    color: #212121;
-  }
-  .style2 h1, .style2 h2 {
-    color: #fff;
-    line-height: 1em;
-    font-size: 2.2em;
-  }
+      .remark-slide-content {
+        font-size: 1.8em;
+        padding-top: .5em;
+        padding-bottom: .5em;
+        padding-left: 1em;
+        padding-right: 1em;
+      }
+      .remark-slide-content h1 {
+        font-size: 2.2em;
+      }
+      .remark-slide-content h2 { font-size: 1.5em; }
+      .remark-slide-content h3 { font-size: 1.3em; }
+      .remark-slide-content blockquote {
+        font-size: 1.2em;
+        padding-left: 1em;
+      }
 
-  /*.style2 h2 {
-    font-family: 'Luckiest Guy';
-  }*/
+      .footnote {
+        bottom: 1em;
+      }
 
-  .style2 h3 {
-    padding-left: 0em;
-    font-size: 1.6em;
-  }
+      .large{
+        font-size: 1.4em;
+      }
 
-  .style2 a {
-    color: #212121;
-  }
+      .small{
+        font-size: .92em;
+      }
 
-  </style>
+      .alert{
+        color: #1b95e0;
+        background-color: #fff;
+      }
+
+      .success{
+        color: #3fb3b2;
+      }
+
+      /*warning: #ffae00*/
+      a > code {
+        color: #3fb3b2;
+      }
+
+      pre {
+        padding: 1px;
+      }
+
+      .remark-code, .remark-inline-code {
+        font-family: 'Ubuntu Mono';
+      }
+
+      .remark-inline-code {
+        color: #ffdd55;
+        background: #212121;
+      }
+
+      .vertical-align {
+        display: flex;
+        align-items: center;
+      }
+
+      .remark-slide-number{
+        /*opacity: 0;*/
+        opacity: 0;
+      }
+
+      .style1 {
+        background: #212121;
+        color: #fff;
+        text-shadow: 0 0 2px #333;
+      }
+
+      .style1 h1, .style1 h2 {
+        color: #fff;
+        font-size: 1.8em;
+      }
+
+      .style1 a {
+        color: #3fb3b2;
+      }
+
+      /*add 2 column*/
+      .column:first-of-type {float:left}
+      .column:last-of-type {float:right}
+
+      .style1 .column:first-of-type {width: 55%}
+      .style1 .column:last-of-type {width: 45%}
+
+
+      .style2 {
+        background: #545454;
+        color: #212121;
+      }
+      .style2 h1, .style2 h2 {
+        color: #fff;
+        line-height: 1em;
+        font-size: 2.2em;
+      }
+
+      /*.style2 h2 {
+      font-family: 'Luckiest Guy';
+      }*/
+
+      .style2 h3 {
+        padding-left: 0em;
+        font-size: 1.6em;
+      }
+
+      .style2 a {
+        color: #212121;
+      }
+
+      </style>
 </head>
-
 
 
 
@@ -189,7 +188,7 @@
     <br/><br/>
     ## University of Toronto
 
-    ### January, 8<sup>th</sup> 2017
+    ### January, 8<sup>th</sup> 2018
 
     <br>
 
@@ -271,95 +270,86 @@
     # Biogeography?
     <hr/>
 
-    .center[![:scale 100%](fig/figmapw1.png)]
+    .center[![:scale 100%](fig/biogeo/ecoreg.png)]
 
     ---
-    # Biogeography
+    # Biogeography?
     <hr/>
 
-    .center[![:scale 100%](fig/figmapw2.png)]
-
-    ---
-    # Biogeography
-    <hr/>
-
-    .center[![:scale 100%](fig/figmapw3.png)]
-
+    .center[![:scale 100%](fig/biogeo/figmapw3.png)]
 
 
     ---
     # Individuals to population
-    <hr/><br/>
+    <hr/>
 
-    .center[![:scale 100%](./fig/figall1.png)]
+    .center[![:scale 100%](fig/mech/figall1.png)]
 
     ---
     # Individuals to population
-    <hr/><br/>
+    <hr/>
 
-    .center[![:scale 100%](./fig/figall2.png)]
+    .center[![:scale 100%](fig/mech/figall2.png)]
 
     ---
     # Population to metapopulations
-    <hr/><br/>
+    <hr/>
 
-    .center[![:scale 100%](./fig/figall3.png)]
+    .center[![:scale 100%](fig/mech/figall3.png)]
 
     ???
     Interaction at this scale that one can actually envision interactions
 
     ---
     # Population to metapopulations
-    <hr/><br/>
+    <hr/>
 
-    .center[![:scale 100%](./fig/figall4.png)]
+    .center[![:scale 100%](fig/mech/figall4.png)]
 
     ???
     Interaction at this scale that one can actually envision interactions
 
     ---
     # Population to metapopulations
-    <hr/><br/>
+    <hr/>
 
-    .center[![:scale 100%](./fig/figall5.png)]
+    .center[![:scale 100%](fig/mech/figall5.png)]
 
     ???
     Interaction at this scale that one can actually envision interactions
 
     ---
     # Metapopulations to metacommunities
-    <hr/><br/>
+    <hr/>
 
-    .center[![:scale 100%](./fig/figall6.png)]
+    .center[![:scale 100%](fig/mech/figall6.png)]
 
     ???
     Interaction at this scale that one can actually envision interactions
 
     ---
     # Metacommunities through time
-    <hr/><br/>
+    <hr/>
 
-    .center[![:scale 100%](./fig/figall7.png)]
+    .center[![:scale 100%](fig/mech/figall7.png)]
 
     ???
     We scaled up in space
-    Let's sclaed up in space
-    Lot's of process to take into account !
+    Let's sclaed up in tome
+    Lots of process to take into account !
     That explain why species are here... Lot's of processes le'ts recap
 
     ---
     # Metacommunities through time
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figall8.png)]
-
-
-
-    ---
-    # Biogeography
     <hr/>
 
-    .center[![:scale 100%](fig/figmapw3.png)]
+    .center[![:scale 100%](fig/mech/figall8.png)]
+
+    ---
+    # Metacommunities through time
+    <hr/>
+
+    .center[![:scale 100%](fig/mech/figall9.png)]
 
 
     ---
@@ -383,20 +373,29 @@
 
 
     ---
-    # Predicting species distributions
+    # Biogeography: questions
+    <hr/><br/>
+
+    --
+    ## How processes generate distributions?
+    ## How to infer processes from distributions?
+
+
+    ---
+    # Biogeography: challenge
     <hr/>
 
     .center[![:scale 100%](./fig/figdem0.png)]
 
 
     ---
-    # Predicting species distributions
+    # Biogeography: challenge
     <hr/>
 
     .center[![:scale 100%](./fig/figdem1.png)]
 
     ---
-    # Predicting species distributions
+    # Biogeography: challenge
     <hr/>
 
     .center[![:scale 100%](./fig/figdem2.png)]
@@ -468,13 +467,17 @@
 
     ### - Pollock *et al*, 2014, *Methods in Ecology and Evolution*
 
-    <br/>
+
+    ---
+    # Predicting species distributions
+    <hr/><br>
 
     --
     ## Theory
 
     ### - Gravel *et al*, 2011, *Ecology Letters*
 
+    ### - Massol *et al*, 2017, *Advances in Ecological Research*
 
 
 
@@ -499,20 +502,28 @@
     # Questions
     <hr/><br/>
 
-    --
-    ## 1. How to integrate biotic interactions into distribution models?
-    <br/><br/>
-
-    --
-    ## 2. How the properties of ecological networks influence co-occurrence?
+    ### How interactions influence species distributions?
+    ### How to infer the role of biotic interactions from co-occurrence data?
 
     <br/><br/>
 
     --
-    ## 3. Can we infer interactions from co-occurrence?
+    1. How to integrate biotic interactions into distribution models?
+
+    --
+    2. How the properties of ecological networks influence co-occurrence?
+
+    --
+    3. Can we infer interactions from co-occurrence?
 
     ???
     des why / des hypothèses et des how
+
+    <br>
+
+    --
+
+
 
 
 
@@ -544,43 +555,43 @@
     ---
     # MacArthur et Wilson (1963, 1967)
     <hr/><br/>
-    .center[![:scale 100%](./fig/figMW1.png)]
+    .center[![:scale 100%](fig/mcaWil/figMW1.png)]
 
     ---
     # MacArthur et Wilson (1963, 1967)
     <hr/><br/>
-    .center[![:scale 100%](./fig/figMW2.png)]
+    .center[![:scale 100%](fig/mcaWil/figMW2.png)]
 
     ---
     # MacArthur et Wilson (1963, 1967)
     <hr/><br/>
-    .center[![:scale 100%](./fig/figMW3.png)]
+    .center[![:scale 100%](fig/mcaWil/figMW3.png)]
 
     ---
     # MacArthur et Wilson (1963, 1967)
     <hr/><br/>
-    .center[![:scale 100%](./fig/figMW4.png)]
+    .center[![:scale 100%](fig/mcaWil/figMW4.png)]
 
     ---
     # MacArthur et Wilson (1963, 1967)
     <hr/><br/>
-    .center[![:scale 100%](./fig/figMW5.png)]
+    .center[![:scale 100%](fig/mcaWil/figMW5.png)]
 
     ---
     # MacArthur et Wilson (1963, 1967)
     <hr/><br/>
-    .center[![:scale 100%](./fig/figMW6.png)]
+    .center[![:scale 100%](fig/mcaWil/figMW6.png)]
 
     ---
     # MacArthur et Wilson (1963, 1967)
     <hr/><br/>
-    .center[![:scale 100%](./fig/figMW7.png)]
+    .center[![:scale 100%](fig/mcaWil/figMW7.png)]
 
 
     ---
     # MacArthur et Wilson (1963, 1967)
     <hr/><br/>
-    .center[![:scale 100%](./fig/figMW8.png)]
+    .center[![:scale 100%](fig/mcaWil/figMW8.png)]
 
 
 
@@ -736,7 +747,7 @@
     # Limits
     <hr/>
 
-    ## For `\(n\)` species, a network `\(W\)`, abiotic variable(s) `\(E\)`,
+    ## For `n` species, a network `W`, abiotic variable(s) `E`,
     --
 
     <br/>
@@ -750,10 +761,6 @@
 
     --
     ## `\(n\)` species `\(2^n\)` potential communities
-
-
-    --
-    ## Harris, 2016, *Ecology*
 
 
     --
@@ -1725,11 +1732,9 @@
 
 
 </textarea>
-<script src="./remark.min.js" type="text/javascript"></script>
-<!-- <script src="http://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript"></script> -->
-<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML&delayStartupUntil=configured" type="text/javascript"></script>
-<script type="text/javascript">
+<script src="remark.min.js" type="text/javascript"></script>
 
+<script type="text/javascript">
   // Macros
   // scale image
   remark.macros.scale = function (percentage) {
@@ -1746,27 +1751,24 @@
     // `this` is the value in the parenthesis, or undefined if left out
     return this.toUpperCase();
   };
-
-
-  var slideshow = remark.create({
-    ratio: "4:3",
-    // ratio: "16:9",
-    highlightStyle: 'sunburst' });
-
-  // Setup MathJax
-  MathJax.Hub.Config({
-    tex2jax: {
-      skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
-    }
-  });
-  MathJax.Hub.Queue(function() {
-    $(MathJax.Hub.getAllJax()).map(function(index, elem) {
-      return(elem.SourceElement());
-    }).parent().addClass('has-jax');
-  });
-
-  MathJax.Hub.Configured();
-
 </script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML&delayStartupUntil=configured" type="text/javascript"></script>
+<script type="text/javascript">
+    var slideshow = remark.create();
+    // ratio: "4:3",
+    // ratio: "16:9",
+
+    // Setup MathJax
+    MathJax.Hub.Config({
+        tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+        }
+    });
+
+    MathJax.Hub.Configured();
+  </script>
+
+
 </body>
 </html>
