--- a/index.html
+++ b/index.html
@@ -600,26 +600,26 @@
     # Model properties
     <hr/><br/>
 
-    ## 1. Colonisation/extinction dynamics
+    ### 1. Colonisation/extinction dynamics
     --
 
     <br/>
-    ## 2. Equilibrium
+    ### 2. Equilibrium
     --
 
     <br/>
-    ## 3. Elegant, easy to expand
+    ### 3. Elegant, easy to build on it
     --
 
     <br/>
-    ## 4. Biotic and abiotic constraints are missing
+    ### 4. Biotic and abiotic constraints are missing
 
     ???
-    Attention, ça marche bien... et très utilisé
+    ça marche bien... et très utilisé
 
 
     ---
-    # Assumption of independence released
+    # Releasing the assumption of independence
     <hr/><br/>
 
     --
@@ -634,7 +634,6 @@
     ## Colonisation and extinction depend on the local community
     <br/>
 
-
     ???
     première étape pour lever l'hypothèse.
 
@@ -643,31 +642,31 @@
     # What did I do?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figeco1.png)]
+    .center[![:scale 100%](fig/gtib/figGTIB1.png)]
 
     ---
     # What did I do?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figeco2.png)]
+    .center[![:scale 100%](fig/gtib/figGTIB2.png)]
 
     ---
     # What did I do?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figeco3.png)]
+    .center[![:scale 100%](fig/gtib/figGTIB3.png)]
 
     ---
     # What did I do?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figeco4.png)]
+    .center[![:scale 100%](fig/gtib/figGTIB4.png)]
 
     ---
     # What did I do?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figeco5.png)]
+    .center[![:scale 100%](fig/gtib/figGTIB5.png)]
 
 
 
@@ -696,19 +695,19 @@
     # What did I do?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figeco6.png)]
+    .center[![:scale 100%](fig/gtib/figGTIB6.png)]
 
     ---
     # What did I do?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figeco7.png)]
+    .center[![:scale 100%](fig/gtib/figGTIB7.png)]
 
     ---
     # What did I do?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figeco8.png)]
+    .center[![:scale 100%](fig/gtib/figGTIB8.png)]
 
 
     ---
@@ -928,7 +927,7 @@
     <br/>
     <br/>
 
-    .center[![:scale 42%](./fig/figeco8.png)]
+    .center[![:scale 42%](fig/gtib/figGTIB8.png)]
     ]
 
     ---
